<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UserProfileActivity">


    <RelativeLayout
        android:id="@+id/rel_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_200">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_tv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_120"
            android:layout_marginTop="@dimen/margin_16"
            app:srcCompat="@drawable/tv_icon"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login_sighnup"
            android:layout_width="@dimen/margin_140"
            android:layout_height="@dimen/margin_40"
            android:layout_below="@id/img_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_16"
            android:background="@drawable/btn_style"
            android:text="@string/login_and_sighnup" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_dark_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rel_login">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_dark_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_8"
            app:srcCompat="@drawable/darkmode" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode"
            android:layout_toStartOf="@id/img_dark_mode"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_centerVertical="true"
            android:textSize="@dimen/text_16"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rel_dark_mode">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/margin_8"
            app:srcCompat="@drawable/ic_baseline_info_24" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_toStartOf="@id/img_info"
            android:text="@string/info" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_go_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

    </RelativeLayout>



</RelativeLayout>